--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "simple-next",
   "version": "0.1.0",
+  "homepage": "https://rraj-official.github.io/hiring-platform-skillmatch/",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -23,6 +26,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@types/aos": "^3.0.4",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
